Implement non-succesive filtering

--- a/pado_visualize/static_src/css/slides.scss
+++ b/pado_visualize/static_src/css/slides.scss
@@ -1,5 +1,12 @@
 @import "colors";
 
+.search-bar {
+  border-radius: 5px;
+  width: 200px;
+  background-color: black ;
+}
+
+
 .container.slide-container {
 
   display: flex;
