--- a/pado_visualize/templates/slides/index.html
+++ b/pado_visualize/templates/slides/index.html
@@ -14,29 +14,6 @@
   </a>
 {% endmacro %}
 
-{% macro search_bar() %}
-  
-  <div>
-    <h2>Filter by:</h2>
-    <form action="" method="get">
-      {% for option in filter_options %}
-        <input type="checkbox" name="filter" value={{option}}>
-        <label for={{option}}>{{option}}</label>
-      {% endfor %}      
-      <p><input type=submit value=Next></p>
-    </form>
-    <select>
-      {% for attribute in metadata_attributes %}
-        <option value="{{ attribute }}">{{ attribute }}</option>
-      {% endfor %}
-    </select>
-    <!-- <select>
-      {% for option in metadata_attribute_options %}
-        <option value="{{ option }}">{{ option }}</option>
-      {% endfor %}
-    </select> -->
-  </div>
-{% endmacro %}
 
 {% block styles %}
   {{ super() }}
@@ -44,28 +21,96 @@
 {% endblock styles %}
 
 {% block content %}
-  <div>
-    {{ search_bar() }}
-  </div>
-  <div class="container slide-container">
-    {% for image_id, image in image_id_pairs %}
-      {{ slide_card(image_id, image) }}
-    {% endfor %}
-  </div>
-  <div class="pagination">
-    {% for idx in range(pages) %}
-      <a href="{{ url_for('slides.index', page=idx, page_size=page_size) }}">
-        {% if idx == page %}
-          <strong>{{ idx }}</strong>
-        {% else %}
-          {{ idx }}
-        {% endif %}
-      </a>
-    {% endfor %}
-  </div>
+  {% block filter_bar %}
+    <div>
+      <fieldset>
+        <legend>Filter by:</legend>
+        <form action="" method="get">
+          <li>
+            <label for="filename_filter_checkbox"></label>
+            <input 
+              id = "filename_filter_checkbox" 
+              type="checkbox" 
+              onclick="EnableFilter(this)"
+            >
+            <span>
+              Filename:
+              <input 
+                type="text" 
+                id="filename_filter_widget" 
+                name="filename" 
+                disabled="disabled" 
+              />
+            </span>
+          </li>
+          <li>
+            <label for="metadata_filter_checkbox"></label>
+            <input 
+              id = "metadata_filter_checkbox" 
+              type="checkbox" 
+              onclick="EnableFilter(this)"
+            >
+            <span>
+              Metadata:
+            </span>
+            <select 
+              id="metadata_filter_widget" 
+              name="metadata_key" 
+              disabled="disabled" 
+              onclick="EnableMetadataOptions(this)"
+            >
+              {% for attribute in metadata_attributes.keys() %}
+                <option value="{{ attribute }}">{{ attribute }}</option>
+              {% endfor %}
+            </select>
+            <select 
+              id="metadata_filter_widget_options" 
+              name="metadata_values" 
+              disabled="disabled"
+            >
+              {% for option in selected_metadata_attribute_options %}
+                <option value="{{ option }}">{{ option }}</option>
+              {% endfor %}
+            </select>
+          </li>
+          <p><input type="submit" value="Filter"></p>
+        </form>
+      </fieldset>
+    </div>
+  {% endblock filter_bar %}
+
+  {% block thumbnails %}
+    {% include "./slides/thumbnails.html" %}
+  {% endblock thumbnails %}
+
 {% endblock content %}
 
 {% block page_scripts %}
   <script type="text/javascript" src="{{ url_for_versioned('static', filename='js/slides_deckgl.js') }}"></script>
+  <script>
+    function EnableFilter(checkbox) {
+      filter_widget_id = checkbox.id.replace('checkbox', 'widget');
+      var filter_widget = document.getElementById(filter_widget_id);
+      filter_widget.disabled = checkbox.checked ? false : true;
+      if (!filter_widget.disabled) {
+        filter_widget.focus();
+      }
+    }
+    function EnableMetadataOptions(metadata_selection) {
+      // TODO: try find a smarter way of implementing a dependent dropdown list
+      const metadata_attributes = {{ metadata_attributes | tojson }};
+
+      const secondselect = document.getElementById('metadata_filter_widget_options');
+      secondselect.innerHTML = null;
+      secondselect.disabled = false;
+      
+      for (const value of metadata_attributes[metadata_selection.value]) {
+        const option = document.createElement('option');
+        option.value = value;
+        option.innerHTML = value;
+        secondselect.appendChild(option);
+      }
+    }
+  </script>
 {% endblock page_scripts %}
 
