Place thumbnails in an iframe - it works!

--- a/pado_visualize/static_src/css/slides.scss
+++ b/pado_visualize/static_src/css/slides.scss
@@ -263,3 +263,8 @@ span.filter-label {
   border-color: $color-primary-dark;
 }
 
+iframe {
+  border: none; 
+  width: 100%;
+  // min-height: 416px;
+}
