--- a/pado_visualize/templates/slides/index.html
+++ b/pado_visualize/templates/slides/index.html
@@ -81,16 +81,17 @@
               </select>
             </div>
           </li>
-          <!-- <p><input type="submit" value="Apply" class="filter-button"></p> -->
         </form>
-        <button class="filter-button" onclick="applyFilter()">Apply</button>
+        <button class="filter-button" onclick="applyFilter('{{ page }}')">Apply</button>
       </fieldset>
+      <div>
+      </div>
     </div>
   {% endblock filter_bar %}
 
   {% block thumbnails %}
     <iframe 
-      src="thumbnails" 
+      src="{{ url_for('slides.thumbnails', page=idx, page_size=page_size) }}" 
       scrolling="auto" 
       onload="resizeIframe(this);" 
       id="thumbnails"></iframe>
@@ -106,13 +107,15 @@
       obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
     }
 
-    function applyFilter() {
+    function applyFilter(page) {
       let form = document.querySelector('#filter_form');
       let data = new FormData(form);
+      console.log(data);
       const current_url = new URL(window.location.href + 'thumbnails');
       for (let [key, value] of data) {
         current_url.searchParams.append(key, value);
       }
+      current_url.searchParams.append('page', 0);
       const thumbnail_frame = document.querySelector('#thumbnails');
       thumbnail_frame.src = current_url;
     }
