--- a/pado_visualize/templates/slides/thumbnails.html
+++ b/pado_visualize/templates/slides/thumbnails.html
@@ -11,47 +11,46 @@
   {% endblock styles %}
 </head>
 
-{% macro slide_card(image_id, image) %}
-  <a target="_top" href="{{ url_for('slides.viewer_openseadragon', image_id=image_id) }}">
-  <div class="card slide-card">
-    <div class="thumbnail">
-      <img src="{{ url_for('slides.thumbnail', image_id=image_id, size=200) }}" alt="{{ image_id }}">
-    </div>
-    <div class="title">{{ image_id.last }}</div>
-    <div class="indicators">
-    </div>
-  </div>
-  </a>
-{% endmacro %}
-
-{% macro slide_cards(image_id_pairs) %} 
-  <div class="container slide-container">
-    {% for image_id, image in image_id_pairs %}
-      {{ slide_card(image_id, image) }}
-    {% endfor %}
-  </div>
-{% endmacro %}
-
-{% block thumbnails %}
-  {{ slide_cards(image_id_pairs) }}
-{% endblock thumbnails %}
-
-{% block pages %}
-  <div class="pagination">
-    {% for idx in range(pages) %}
-      <a href="{{ url_for('slides.index', page=idx, page_size=page_size) }}">
-        {% if idx == page %}
-          <strong>{{ idx }}</strong>
-        {% else %}
-          {{ idx }}
-        {% endif %}
+<body>
+  <div class="container-thumbnails">
+    {% macro slide_card(image_id, image) %}
+      <a target="_top" href="{{ url_for('slides.viewer_openseadragon', image_id=image_id) }}">
+      <div class="card slide-card">
+        <div class="thumbnail">
+          <img src="{{ url_for('slides.thumbnail', image_id=image_id, size=200) }}" alt="{{ image_id }}">
+        </div>
+        <div class="title">{{ image_id.last }}</div>
+        <div class="indicators">
+        </div>
+      </div>
       </a>
-    {% endfor %}
-  </div>
-{% endblock pages %}
+    {% endmacro %}
 
-<script type="text/javascript">
-  function fake() {
-    console.log('fake');
-  }
-</script>
+    {% macro slide_cards(image_id_pairs) %} 
+      <div class="container slide-container">
+        {% for image_id, image in image_id_pairs %}
+          {{ slide_card(image_id, image) }}
+        {% endfor %}
+      </div>
+    {% endmacro %}
+
+    {% block thumbnails %}
+      {{ slide_cards(image_id_pairs) }}
+    {% endblock thumbnails %}
+
+    {% block pages %}
+      <div class="pagination">
+        {% for idx in range(pages) %}
+          <a 
+            href="{{ url_for('slides.thumbnails', page=idx, page_size=page_size , filter=filter) }}"
+            class="{% if idx == page %}active{% endif %}""
+          >
+          {{ idx }}
+          </a>
+        {% endfor %}
+      </div>
+    {% endblock pages %}
+  </div>
+  
+</body>
+
