Working lineup example (not real metadata)

--- a/pado_visualize/templates/sidebar.html
+++ b/pado_visualize/templates/sidebar.html
@@ -20,7 +20,7 @@
 
   <ul class="menu">
     {{ menu_item("Overview", 'home.index', fa='globe-europe') }}
-    {# menu_item("Metadata", 'home.index', fa='file-alt') #}
+    {{ menu_item("Metadata", 'metadata.index', fa='file-alt') }}
     {{ menu_item("Slides", 'slides.index', fa='microscope') }}
   </ul>
 
