--- a/pado_visualize/templates/metadata/index.html
+++ b/pado_visualize/templates/metadata/index.html
@@ -7,27 +7,18 @@
   <link href="https://unpkg.com/lineupjs/build/LineUpJS.css" rel="stylesheet">
 {% endblock styles %}
 
-{% block content %}
-    <div id="lineup" style="height: 100vh;">
-      
-    </div>
+{% block content %} 
+  <div id="lineup" style="height: 100vh;">
+  </div>
 {% endblock content %}
 
 {% block page_scripts %}
   <script src="https://unpkg.com/lineupjs/build/LineUpJS.js"></script>
   <script>
-    const arr = [];
-    const cats = ['c1', 'c2', 'c3'];
-    for (let i = 0; i < 100; ++i) {
-    arr.push({
-      a: Math.random() * 10,
-      d: 'Row ' + i,
-      cat: cats[Math.floor(Math.random() * 3)],
-      cat2: cats[Math.floor(Math.random() * 3)]
-    })
-    }
-    const lineup = LineUpJS.asLineUp(document.getElementById('lineup'), arr);
-    console.log('here');
-
+    var metadata = JSON.parse('{{ metadata | tojson | safe}}');
+    const lineup = LineUpJS.asLineUp(
+      document.getElementById('lineup'), 
+      metadata,
+    );
   </script>
 {% endblock page_scripts %}
