--- a/pado_visualize/templates/metadata/index.html
+++ b/pado_visualize/templates/metadata/index.html
@@ -4,7 +4,7 @@
 {% block styles %}
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides.css') }}">
-  <link href="https://unpkg.com/lineupjs/build/LineUpJS.css" rel="stylesheet">
+  <link href="{{ url_for('static', filename='temporary/lineupjs/LineUpJS.css') }}" rel="stylesheet">
 {% endblock styles %}
 
 {% block content %} 
@@ -13,7 +13,7 @@
 {% endblock content %}
 
 {% block page_scripts %}
-  <script src="https://unpkg.com/lineupjs/build/LineUpJS.js"></script>
+  <script src="{{ url_for('static', filename='temporary/lineupjs/LineUpJS.js') }}"></script>
   <script>
     var metadata = JSON.parse('{{ metadata | tojson | safe}}');
     const lineup = LineUpJS.asLineUp(
