adding missing lineup fonts and strip out unused code

--- a/pado_visualize/templates/slides/thumbnails.html
+++ b/pado_visualize/templates/slides/thumbnails.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   {% block styles %}
-    <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides.css') }}">
+    <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides.scss') }}">
     <link rel="stylesheet" href="{{ url_for_versioned('static', filename='base.css') }}">
   {% endblock styles %}
 </head>
