--- a/pado_visualize/templates/metadata/index.html
+++ b/pado_visualize/templates/metadata/index.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides.css') }}">
+  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides.scss') }}">
   <link href="{{ url_for('static', filename='temporary/lineupjs/LineUpJS.css') }}" rel="stylesheet">
 {% endblock styles %}
 
