--- a/pado_visualize/templates/slides/index.html
+++ b/pado_visualize/templates/slides/index.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides.css') }}">
+  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='css/slides.scss') }}">
 {% endblock styles %}
 
 {% macro slide_card(image_id, image) %}
@@ -100,7 +100,6 @@
 {% endblock content %}
 
 {% block page_scripts %}
-  <script type="text/javascript" src="{{ url_for_versioned('static', filename='js/slides_deckgl.js') }}"></script>
   <script>
 
     function resizeIframe(obj) {
