remove the header

--- a/pado_visualize/templates/layout.html
+++ b/pado_visualize/templates/layout.html
@@ -18,9 +18,11 @@
 </head>
 <body>
   <div class="pado pado-root">
+    <!--
     <header class="pado-header">
-      {% include "header.html" %}
+      {# include "header.html" #}
     </header>
+    -->
     <nav class="pado-sidebar">
       {% include "sidebar.html" %}
     </nav>
