--- a/pado_visualize/templates/slides/index.html
+++ b/pado_visualize/templates/slides/index.html
@@ -3,6 +3,7 @@
 
 {% block styles %}
   {{ super() }}
+  <link rel="stylesheet" href="{{ url_for_versioned('static', filename='slides.css') }}">
 {% endblock styles %}
 
 {% macro slide_card(image_id, image) %}
@@ -99,6 +100,8 @@
 {% endblock content %}
 
 {% block page_scripts %}
+  {{ super() }}
+  <script type="text/javascript" href="{{ url_for_versioned('static', filename='slides.js') }}"></script>
   <script>
 
     function resizeIframe(obj) {
