--- a/pado_visualize/static_src/css/slides.scss
+++ b/pado_visualize/static_src/css/slides.scss
@@ -67,123 +67,46 @@
   padding: 2em;
 }
 
-.pagination {
-  display: inline-block;
-  padding-top: 2em;
-}
+.pagination-container {
+  margin-top: 2em;
+  display:flex; 
+  flex-direction: row; 
+  justify-content: left; 
+  align-items: center;
 
-.pagination a {
-  color: black;
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-  border: thin solid lightgray;
-}
+  .page-picker {
+    border: thin solid grey;
+    display: inline-block;
+    margin-right: 1em;
+    padding: 2px;
+  
+    select {
+      margin: 0px 8px;
+      padding: 8px 8px;
+      border: none;
+    }
+  }
 
-.pagination a.active {
-  background-color: $color-primary-dark;
-  color: white;
-  font-weight: 700;
-  border: thin solid $color-primary-dark;
-}
-
-.pagination a:hover:not(.active) {background-color: #ddd;}
-
-/*
-a:hover > .container.slide-container {
-  border-color: $color-primary-dark;
-  .title {
-    background: $color-primary-light;
+  .pagination {
+    display: inline-block;
+    a {
+      color: black;
+      float: left;
+      padding: 8px 16px;
+      text-decoration: none;
+      border: thin solid lightgray;
+    }
+  
+    a.active {
+      background-color: $color-primary-dark;
+      color: white;
+      font-weight: 700;
+      border: thin solid $color-primary-dark;
+    }
+  
+    a:hover:not(.active) {background-color: #ddd;}
   }
 }
-*/
-
-
-
-/*
-
-.thumbnail-container {
-}
-
-.slide-container > a {
-  width: 100%;
-  height: 100%;
-}
-
-.slide-container .thumbnail-card {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  padding: 4px;
-}
-
-.slide-container .thumbnail-card .thumbnail {
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
-  margin: auto;
-}
-
-.slide-container .thumbnail-card .grid-overlay {
-  display: none;
-  max-width: 100%;
-  max-height: 100%;
-  width: 100%;
-  height: auto;
-}
-
-.slide-container .annotation-indicator {
-  position: absolute;
-  margin: 3px;
-  padding: 2px 7px;
-  top: 0;
-  left: 0;
-  border-radius: 15px;
-  background: #333333;
-  color: #f3f4f5;
-}
-
-.slide-container .prediction-indicator {
-  position: absolute;
-  margin: 3px;
-  padding: 2px 8px;
-  top: 0;
-  right: 0;
-  font-weight: 600;
-  border-radius: 15px;
-  background: rgb(123, 121, 113);
-  color: #ffffff;
-}
-
-.slide-container .prediction-value-indicator {
-  position: absolute;
-  margin: 3px;
-  padding: 2px 7px;
-  bottom: 0;
-  left: 0;
-  border-radius: 5px;
-  background: dodgerblue;
-  color: #f3f4f5;
-}
-
-.slide-container .prediction-value-indicator > span {
-  display: block;
-  font-size: smaller;
-  white-space: nowrap;
-}
-
-.thumbnail-card:hover .thumbnail {
-    display: none;
-}
-
-.thumbnail-card:hover .grid-overlay {
-    display: block;
-}
-*/
 
 .thumbnail-card > img {
   image-rendering: optimizeSpeed;
@@ -295,5 +218,5 @@ span.filter-label {
 iframe {
   border: none; 
   width: 100%;
-  // min-height: 416px;
 }
+
